mobile testing, Safari webkit issue (backface-visibility)

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -67,7 +67,7 @@ width: 0px;
   justify-content: center;
   width: 100%;
   height: 100%;
-  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
   transition: all 0.7s ease-in-out;
   &:hover {
     transform: rotateY(180deg);
@@ -84,7 +84,7 @@ width: 0px;
   width: 100%;
   height: 100%;
   border-radius: 50px;
-  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   border: 8px solid #264653;
 }
 
